openshift/routes/helm-gen-route-backend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '4'
  name: backend
  namespace: multi-agents
  labels:
    helm.sh/chart: multi-agents-1.0.0
    app.kubernetes.io/name: multi-agents
    app.kubernetes.io/instance: multi-agents
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
    app: backend
spec:
  host: backend-multi-agents.apps.your-cluster.example.com
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
