openshift/routes/helm-gen-route-llamastack-rhoai-service.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llamastack-rhoai-service
  namespace: multi-agents
  labels:
    helm.sh/chart: multi-agents-1.0.0
    app.kubernetes.io/name: multi-agents
    app.kubernetes.io/instance: multi-agents
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
    app: llamastack
spec:
  host: llamastack-rhoai-multi-agents.apps.your-cluster.example.com
  to:
    kind: Service
    name: llamastack-rhoai-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
